fix jvm 11